--- a/testtesttest.ipynb
+++ b/testtesttest.ipynb
@@ -157,18 +157,18 @@
    "source": [
     "正しく動作しているかを確認するために、この関数に-10から10の値を入力したときの出力をプロットしておいてください。   \n",
     "$$ h_\\theta(x) = g(\\theta^T x) $$   \n",
-    "$$ g(z) = \\frac{1}{1+e^{-z}} $$   \n",
+    "$$ g(z) = \\frac{1}{1+e^{-z}} $$\n",
     "$$ J(\\theta)=  \\frac{1}{m}  \\sum_{i=1}^{m}[-y^{(i)} log(h_\\theta(x^{(i)})) - (1-y^{(i)}) log(1-h_\\theta(x^{(i)}))] +\n",
     "\\frac{\\lambda}{2m}\\sum_{j=1}^n \\theta^2_j $$\n",
-    "$ m $ : 入力されるデータの数<br>\n",
-    "$ h_\\theta() $ : 仮定関数<br>\n",
-    "$ x $ : 特徴量ベクトル<br>\n",
-    "$ \\theta $ : パラメータベクトル<br>\n",
-    "$ g() $ : シグモイド関数<br>\n",
-    "$ x^{(i)} $ :i 番目のサンプルの特徴量ベクトル<br>\n",
-    "$ y^{(i)} $ :i 番目のサンプルの正解ラベル<br>\n",
-    "$ \\theta_j $ :j 番目のパラメータ(重み) <br>\n",
-    "$ n $ : 特徴量の数<br>\n",
+    "$ m $ : 入力されるデータの数\n",
+    "$ h_\\theta() $ : 仮定関数\n",
+    "$ x $ : 特徴量ベクトル\n",
+    "$ \\theta $ : パラメータベクトル\n",
+    "$ g() $ : シグモイド関数\n",
+    "$ x^{(i)} $ :i 番目のサンプルの特徴量ベクトル\n",
+    "$ y^{(i)} $ :i 番目のサンプルの正解ラベル\n",
+    "$ \\theta_j $ :j 番目のパラメータ(重み)\n",
+    "$ n $ : 特徴量の数\n",
     "$ \\lambda $ : 正則化パラメータ"
    ]
   },
