--- a/testtesttest.ipynb
+++ b/testtesttest.ipynb
@@ -152,6 +152,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "$$ h_\\theta(x) = g(\\theta^T x) $$   \n",
+    "$$ g(z) = \\frac{1}{1+e^{-z}} $$\n",
+    "$$ J(\\theta)=  \\frac{1}{m}  \\sum_{i=1}^{m}[-y^{(i)} log(h_\\theta(x^{(i)})) - (1-y^{(i)}) log(1-h_\\theta(x^{(i)}))] +\n",
+    "\\frac{\\lambda}{2m}\\sum_{j=1}^n \\theta^2_j $$\n",
+    "$ m $ : 入力されるデータの数\n",
+    "$ h_\\theta() $ : 仮定関数\n",
+    "$ x $ : 特徴量ベクトル\n",
+    "$ \\theta $ : パラメータベクトル\n",
+    "$ g() $ : シグモイド関数\n",
+    "$ x^{(i)} $ :i 番目のサンプルの特徴量ベクトル\n",
+    "$ y^{(i)} $ :i 番目のサンプルの正解ラベル\n",
+    "$ \\theta_j $ :j 番目のパラメータ(重み)\n",
+    "$ n $ : 特徴量の数\n",
+    "$ \\lambda $ : 正則化パラメータ"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
