--- a/testtesttest.ipynb
+++ b/testtesttest.ipynb
@@ -155,6 +155,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$ m $ : 入力されるデータの数  \n",
+    "$ h_\\theta() $ : 仮定関数  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "正しく動作しているかを確認するために、この関数に-10から10の値を入力したときの出力をプロットしておいてください。   \n",
     "$$ h_\\theta(x) = g(\\theta^T x) $$   \n",
     "$$ g(z) = \\frac{1}{1+e^{-z}} $$\n",
