--- a/testtesttest.ipynb
+++ b/testtesttest.ipynb
@@ -155,8 +155,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$m$  : 入力されるデータの数  \n",
-    "$h_\\theta()$ : 仮定関数  "
+    "$m$  : 入力されるデータの数<br><br><br>\n",
+    "$h_\\theta()$ : 仮定関数<br><br><br>"
    ]
   },
   {
